<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/nom_categorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="" />

    <RelativeLayout
        android:id="@+id/layout_meteo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@layout/shape_meteo" >

        <ProgressBar
		   android:id="@+id/progressBarMeteo"
		   style="?android:attr/progressBarStyleLarge"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:layout_centerHorizontal="true"
		   android:visibility="invisible"
		 />
        
        <TextView
            android:id="@+id/dans_heure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/meteo_lille"
            android:textColor="#886849" />

        <ImageView
            android:id="@+id/icone_temps"
            android:contentDescription="@string/description_image_meteo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/dans_heure"
            android:layout_centerInParent="true"
            />
        
        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/dans_heure"
            android:layout_below="@+id/dans_heure"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#e5e533"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator"
            android:layout_width="2dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/etat_zoo"
            android:layout_marginLeft="15dp"
            android:background="@color/separator_marron" />


        <ImageView
            android:id="@+id/voyant"
            android:contentDescription="@string/description_image_voyant_zoo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/voyant_vert" />

        <TextView
            android:id="@+id/etat_zoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/icone_temps"
            android:layout_toLeftOf="@+id/voyant"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textColor="#349a18"
            android:textSize="18sp" />
        
         <TextView
            android:id="@+id/prochain_horaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/voyant"
            android:layout_marginTop="25dp"
            android:paddingRight="5dp"
			android:paddingBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

    </RelativeLayout>
    
   <TextView
       android:id="@+id/a_la_une"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/layout_meteo"
       android:text="@string/a_la_une"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="@color/a_la_une"
       android:paddingLeft="12dp"
       android:textStyle="bold" />

    <ListView
        android:id="@+id/list_view_article"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/a_la_une"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:divider="@android:color/transparent"
 		android:dividerHeight="10.0sp"
 		android:paddingBottom="10dp"
      />
    
</RelativeLayout>
